[package]
name = "rpmostree-rust"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>", "Jonathan Lebon <jonathan@jlebon.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
libc = "0.2.80"
nix = "0.19.1"
glib-sys = "0.10.1"
glib = "0.10.3"
gio-sys = "0.10.1"
gio = "0.9.1"
ostree = { version = "0.9.1", features = ["v2020_4"] }
ostree-sys = "0.7.1"
tempfile = "3.1.0"
clap = "2.33.3"
structopt = "0.3.20"
openat = "0.1.19"
openat-ext = "^0.1.9"
curl = "0.4.34"
rayon = "1.5.0"
c_utf8 = "0.1.0"
rand = "0.7.3"
systemd = "0.8.1"
indicatif = "0.15.0"
lazy_static = "1.4.0"
envsubst = "0.2.0"
subprocess = "0.2.6"
chrono = { version = "0.4.19", features = ["serde"] }
libdnf-sys = { path = "libdnf-sys", version = "0.1.0" }

[lib]
name = "rpmostree_rust"
path = "src/lib.rs"
crate-type = ["staticlib"]
