[package]
name = "rpmostree-rust"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>", "Jonathan Lebon <jonathan@jlebon.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0"
serde_yaml = "0.8"
libc = "0.2"
nix = "0.18.0"
glib-sys = "0.10.1"
glib = "0.10"
gio-sys = "0.10.0"
gio = "0.9"
ostree = { version = "0.9.0", features = ["v2020_4"] }
ostree-sys = "0.7.0"
tempfile = "3.0.3"
clap = "~2.33"
structopt = "0.3"
openat = "0.1.19"
openat-ext = "0.1.5"
curl = "0.4.33"
rayon = "1.4"
c_utf8 = "0.1.0"
rand = "0.7.3"
systemd = "0.6.0"
indicatif = "0.15.0"
lazy_static = "1.1.0"
envsubst = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
libdnf-sys = { path = "libdnf-sys", version = "0.1.0" }


[lib]
name = "rpmostree_rust"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
# Unwinding across FFI boundaries is undefined behavior, and anyways, we're
# [crash-only](https://en.wikipedia.org/wiki/Crash-only_software)
panic = "abort"
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true
# For true release builds, we do suggest you enable LTO via e.g.
# env RUSTFLAGS='-C lto=true' as part of the outer build.  It's just
# off by default because it's quite slow and the default is more oriented
# towards local development.
