[package]
name = "libdnf-sys"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>", "Jonathan Lebon <jonathan@jlebon.com>"]
edition = "2018"
links = "dnf"

[dependencies]
cxx = "1.0.52"
glib = "0.10.3"

[lib]
name = "libdnf_sys"
path = "lib.rs"

[build-dependencies]
cmake = "0.1.45"
system-deps = "3.2"
anyhow = "1.0"
cxx-build = "1.0.51"

# This currently needs to duplicate the libraries from libdnf
[package.metadata.system-deps]
rpm = "4"
# libdnf dependencies
librepo = "1"
libsolv = "0.7"
libsolvext = "0.7"
# Older libgpgme did not provide a pkg-config file
gpgme = { version = "1", optional = true }
openssl = "1"
libcurl = "7"
sqlite3 = "3"
modulemd = { name = "modulemd-2.0", version = "2" }
jsonc = { name = "json-c", version = "0" }
glib = { name = "glib-2.0", version = "2" }
zck = { version = "0.9", optional = true }
