[package]
name = "rpmostree-client"
description = "Client side bindings for rpm-ostree"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
keywords = ["ostree", "rpm-ostree"]
documentation = "http://docs.rs/rpmostree-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.67"
